[gd_scene load_steps=9 format=3 uid="uid://cxgaavewg0jbi"]

[ext_resource type="Script" path="res://Scripts/Placeable.gd" id="1_1yjnn"]
[ext_resource type="AudioStream" uid="uid://ratgcebmg2xd" path="res://Sound/Explosion3__027.wav" id="2_g5u5i"]
[ext_resource type="PackedScene" uid="uid://c5egotsf7fdg4" path="res://Prefabs/PathNode.tscn" id="2_htq13"]
[ext_resource type="Texture2D" uid="uid://cq4lo5nuujjv" path="res://Art/Sprites/TetrisPlaceholders/Tetromino_J1_1.png" id="2_riihf"]
[ext_resource type="AudioStream" uid="uid://p1l3buuxvytl" path="res://Sound/block_impact_01.wav" id="2_uc7ox"]
[ext_resource type="PackedScene" uid="uid://c4x6g67fj5uq8" path="res://Prefabs/hold_point_generator.tscn" id="3_5mqgh"]
[ext_resource type="PackedScene" uid="uid://dohp3cgpxnwcp" path="res://Prefabs/ShardEmitter.tscn" id="3_oyvqx"]

[sub_resource type="AudioStreamRandomizer" id="AudioStreamRandomizer_oimvx"]
random_pitch = 1.5
random_volume_offset_db = 1.0
streams_count = 1
stream_0/stream = ExtResource("2_uc7ox")

[node name="PlaceableCharacterBody2d" type="CharacterBody2D"]
input_pickable = true
script = ExtResource("1_1yjnn")
pathnode_prefab = ExtResource("2_htq13")

[node name="Explosion3003" type="AudioStreamPlayer" parent="."]
stream = ExtResource("2_g5u5i")
volume_db = -15.22

[node name="BlockImpact01" type="AudioStreamPlayer" parent="."]
stream = SubResource("AudioStreamRandomizer_oimvx")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("2_riihf")
centered = false

[node name="ShardEmitter" parent="Sprite2D" instance=ExtResource("3_oyvqx")]
nbr_of_shards = 10
min_impulse = 50.0
max_impulse = 200.0

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="."]
polygon = PackedVector2Array(15, 0, -45, 0, -45, -30, 45, -30, 45, 30, 15, 30)

[node name="HoldPointGenerator" parent="." instance=ExtResource("3_5mqgh")]
z_index = 2

[connection signal="input_event" from="." to="." method="on_collision_input_event"]
